--- a/composer.json
+++ b/composer.json
@@ -20,28 +20,28 @@
         "yiisoft/yii2": "~2.0.0",
         "ralouphie/getallheaders": "~2.0",
         "psr/http-message": "dev-master",
+		"psr/log": "dev-master",
+		"psr/container": "dev-master",
+		"psr/cache": "dev-master",
         "guzzlehttp/psr7": "dev-master",
         "guzzlehttp/promises": "dev-master",
         "guzzlehttp/guzzle": "dev-master",
         "spatie/dropbox-api": "~1.6",
-        "league/flysystem": "~1.0",
         "spatie/flysystem-dropbox": "~1.0",
         "microsoft/azure-storage": "dev-master",
+		"league/flysystem": "~1.0",
         "league/flysystem-azure": "dev-master",
-        "psr/cache": "dev-master",
+		"league/flysystem-aws-s3-v3": "~1.0",
         "league/flysystem-cached-adapter": "~1.0",
         "mtdowling/jmespath.php": "~2.4",
         "aws/aws-sdk-php": "~3.62",
-        "psr/log": "dev-master",
-        "league/flysystem-aws-s3-v3": "~1.0",
         "monolog/monolog": "1.x-dev",
-        "psr/container": "dev-master",
         "pimple/pimple": "dev-master",
         "symfony/polyfill-mbstring": "dev-master",
         "symfony/http-foundation": "2.7.x-dev",
         "symfony/event-dispatcher": "2.7.x-dev",
         "symfony/debug": "2.8.x-dev",
-        "symfony/polyfill-ctype": "~1.9",
+        "symfony/polyfill-ctype": "1.9.0",
         "symfony/http-kernel": "2.7.x-dev"
     },
     "autoload": {
