--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "aws/aws-sdk-php": "~3.62",
         "monolog/monolog": "~1",
         "pimple/pimple": "dev-master",
-        "symfony/polyfill-mbstring": "dev-master",
+        "symfony/polyfill-mbstring": "~1.9",
         "symfony/http-foundation": "~2.7",
         "symfony/event-dispatcher": "~2.7",
         "symfony/debug": "~2.8",
