--- a/composer.json
+++ b/composer.json
@@ -19,24 +19,24 @@
 		"php": ">=7.0.0",
         "yiisoft/yii2": "~2.0.0",
         "ralouphie/getallheaders": "~2.0",
-        "psr/http-message": "dev-master",
-		"psr/log": "dev-master",
-		"psr/container": "dev-master",
-		"psr/cache": "dev-master",
-        "guzzlehttp/psr7": "dev-master",
-        "guzzlehttp/promises": "dev-master",
-        "guzzlehttp/guzzle": "dev-master",
+        "psr/http-message": "~1.0",
+		"psr/log": "~1.0",
+		"psr/container": "~1.0",
+		"psr/cache": "~1.0",
+        "guzzlehttp/psr7": "~1.5",
+        "guzzlehttp/promises": "~1.4",
+        "guzzlehttp/guzzle": "~6.3",
         "spatie/dropbox-api": "~1.6",
         "spatie/flysystem-dropbox": "~1.0",
-        "microsoft/azure-storage": "dev-master",
+        "microsoft/azure-storage": "~0.19",
 		"league/flysystem": "~1.0",
-        "league/flysystem-azure": "dev-master",
+        "league/flysystem-azure": "~1.0",
 		"league/flysystem-aws-s3-v3": "~1.0",
         "league/flysystem-cached-adapter": "~1.0",
         "mtdowling/jmespath.php": "~2.4",
         "aws/aws-sdk-php": "~3.62",
         "monolog/monolog": "~1",
-        "pimple/pimple": "dev-master",
+        "pimple/pimple": "~3.2",
         "symfony/polyfill-mbstring": "~1.9",
         "symfony/http-foundation": "~2.7",
         "symfony/event-dispatcher": "~2.7",
