--- a/composer.json
+++ b/composer.json
@@ -17,32 +17,7 @@
     ],
     "require": {
 		"php": ">=7.0.0",
-        "yiisoft/yii2": "~2.0.0",
-        "ralouphie/getallheaders": "~2.0",
-        "psr/http-message": "~1.0",
-		"psr/log": "~1.0",
-		"psr/container": "~1.0",
-		"psr/cache": "~1.0",
-        "guzzlehttp/psr7": "~1.4",
-        "guzzlehttp/promises": "~1.4",
-        "guzzlehttp/guzzle": "~6.3",
-        "spatie/dropbox-api": "~1.6",
-        "spatie/flysystem-dropbox": "~1.0",
-        "microsoft/azure-storage": "~0.19",
-		"league/flysystem": "~1.0",
-        "league/flysystem-azure": "~1.0",
-		"league/flysystem-aws-s3-v3": "~1.0",
-        "league/flysystem-cached-adapter": "~1.0",
-        "mtdowling/jmespath.php": "~2.4",
-        "aws/aws-sdk-php": "~3.62",
-        "monolog/monolog": "~1",
-        "pimple/pimple": "~3.2",
-        "symfony/polyfill-mbstring": "*",
-        "symfony/http-foundation": "*",
-        "symfony/event-dispatcher": "*",
-        "symfony/debug": "*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/http-kernel": "*"
+        "yiisoft/yii2": "~2.0.0"
     },
     "autoload": {
         "psr-0": {
