--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "The module is designed for simplified construction of site pages.",
 	"version": "0.1.0",
     "type": "yii2-extension",
-    "keywords": ["yii2","extension"],
+    "keywords": ["yii2","module","widget"],
     "license": "GPL-3.0+",
     "authors": [
         {
@@ -17,7 +17,8 @@
     ],
     "require": {
 		"php": ">=7.0.0",
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "~2.0.0",
+		"yiisoft/yii2-imagine": "~2.1.0"
     },
     "autoload": {
         "psr-4": {
